--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                                        <img src="./assets/images/agric-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
-
+                                                        <span>12th March  2023</span>
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
@@ -267,6 +267,8 @@
                                                        <img src="./assets/images/agric-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                    <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -275,6 +277,8 @@
                                                        <img src="./assets/images/agric-3.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                    <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -283,6 +287,8 @@
                                                        <img src="./assets/images/food-4.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -299,6 +305,8 @@
                                                        <img src="./assets/images/tech-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                        <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
@@ -307,6 +315,8 @@
                                                          <img src="./assets/images/tech-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -315,6 +325,8 @@
                                                         <img src="./assets/images/tech-6.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>                                                   </div>                                               
 
                                            </div>
@@ -323,6 +335,8 @@
                                                        <img src="./assets/images/tech-7.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                        <span>12th March  2023</span>
+
                                                            <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -339,6 +353,8 @@
                                                          <img src="./assets/images/news-4.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>
                                            </div>
@@ -347,6 +363,8 @@
                                                         <img src="./assets/images/news-2.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -355,6 +373,8 @@
                                                         <img src="./assets/images/ad-7.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                          <span>12th March  2023</span>
+
                                                          <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>
@@ -363,6 +383,8 @@
                                                         <img src="./assets/images/news-1.jpg">
                                                    </div>
                                                    <div class="main-stories-headline float-end">
+                                                       <span>12th March  2023</span>
+
                                                        <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                                    </div>                                               
                                            </div>                                       
@@ -457,7 +479,7 @@
                                              <img src="./assets/images/lifestyle-1.jpg">
                                          </div>
                                          <div class="popular-posts-body float-end">
-                                             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                             <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                          </div>
                                    </div>
                                    <div class="popular-posts-story">
@@ -465,7 +487,7 @@
                                              <img src="./assets/images/tech-3.jpg">
                                          </div>
                                          <div class="popular-posts-body float-end">
-                                             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                             <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                          </div>
                                    </div>
                                    <div class="popular-posts-story">
@@ -473,7 +495,7 @@
                                              <img src="./assets/images/food-1.jpg">
                                          </div>
                                          <div class="popular-posts-body float-end">
-                                             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                             <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                          </div>
                                    </div>
                                    <div class="popular-posts-story">
@@ -481,7 +503,7 @@
                                              <img src="./assets/images/images-6.jpg">
                                          </div>
                                          <div class="popular-posts-body float-end">
-                                             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+                                             <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
                                          </div>
                                    </div>
 
