minebye byeooo boi

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                                    </div>
                                                    <div class="main-stories-headline float-end">
                                                         <span>12th March  2023</span>
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -269,7 +269,7 @@
                                                    <div class="main-stories-headline float-end">
                                                     <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -279,7 +279,7 @@
                                                    <div class="main-stories-headline float-end">
                                                     <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -289,7 +289,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
 
@@ -317,7 +317,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -327,7 +327,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>                                                   </div>                                               
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>                                                   </div>                                               
 
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -337,7 +337,7 @@
                                                    <div class="main-stories-headline float-end">
                                                         <span>12th March  2023</span>
 
-                                                           <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                           <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                   
@@ -355,7 +355,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -365,7 +365,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -375,7 +375,7 @@
                                                    <div class="main-stories-headline float-end">
                                                           <span>12th March  2023</span>
 
-                                                         <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                         <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
                                            <div class="main-stories-description pt-2 pb-2">
@@ -385,7 +385,7 @@
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
 
-                                                       <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</a></h5>
+                                                       <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>                                       
 
