good morning new day

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                       <a class="navbar-brand" href="#">
                           <!--<img src="./assets/images/pngwing.com (84).png" src="logo">-->
                       </a>
-                      <button class="navbar-toggler" type="button"  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:#fff">
+                      <button class="navbar-toggler" type="button"  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:#fff !important">
                           <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -43,7 +43,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href=./page/entertainment.html">Entertainment</a>
+                                    <a class="nav-link" href="./page/entertainment.html">Entertainment</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./page/lifestyle.html">Lifestyle</a>
