--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 
                     <div class="news-section-sheet">
                            <div class="row">
-                                <div class="news-sheet-article">
+                                <!--<div class="">-->
 
-                                <div class="col-md-4 " id="new_items_sheet">
+                                <div class="col-md-4 news-sheet-article" id="new_items_sheet">
                                                                          <div class="top-story-line">
                                          <img src="./assets/images/agric-1.jpg">
                                      </div>
@@ -295,10 +295,10 @@
                                                    </div>                                               
                                            </div>
                                         </div>
-                                     </div>
+                                     <!--</div>-->
                                 </div>
-                                <div class="news-sheet-article">
-                                <div class="col-md-4">
+                                <!--<div class="">-->
+                                <div class="col-md-4 news-sheet-article">
                                     
                                      <div class="top-story-line">
                                          <img src="./assets/images/tech-4.jpg">
@@ -344,11 +344,11 @@
                                                            <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur</b></a></h5>
                                                    </div>                                               
                                            </div>
-                                        </div>
+                                        <!--</div>-->
                                      </div>                                     
                                 </div>
-                                <div class="news-sheet-article">
-                                <div class="col-md-4">
+                                <!--<div class="">-->
+                                <div class="col-md-4 news-sheet-article">
                                      
                                      <div class="top-story-line">
                                          <img src="./assets/images/news-1.jpg">
@@ -395,7 +395,7 @@
                                                    </div>                                               
                                            </div>                                       
                                         </div>
-                                     </div>
+                                     <!--</div>-->
                                 </div>
                            </div>
                     </div>
