hello good morning

--- a/index.html
+++ b/index.html
@@ -251,8 +251,14 @@
                                 <!--<div class="">-->
 
                                 <div class="col-md-4 news-sheet-article" id="new_items_sheet">
-                                                                         <div class="top-story-line">
+                                      <div class="top-story-line">
                                          <img src="./assets/images/agric-1.jpg">
+                                         <div class="top-story-line-overlay">
+                                                              <div class="top-story-line-overlay-text">
+                                                                    <h4>Lorem ipsum dolor sit amet consectetur adipiscing</h4>
+                                                              </div>                                             
+
+                                         </div>
                                      </div>
                                      <div class="main-stories">
                                            <div class="main-stories-description pt-2 pb-2">
@@ -302,6 +308,11 @@
                                     
                                      <div class="top-story-line">
                                          <img src="./assets/images/tech-4.jpg">
+                                         <div class="top-story-line-overlay">
+                                                     <div class="top-story-line-overlay-text">
+                                                                   <h4>Lorem ipsum dolor sit amet consectetur adipiscing</h4>
+                                                              </div>
+                                         </div>
                                      </div>
                                      <div class="main-stories">
                                            <div class="main-stories-description pt-2 pb-2">
@@ -327,6 +338,11 @@
                                            <div class="main-stories-description pt-2 pb-2">
                                                    <div class="main-stories-image float-start">
                                                         <img src="./assets/images/tech-6.jpg">
+                                                        <div class="top-story-line-overlay">
+                                                              <div class="top-story-line-overlay-text">
+                                                                    <h4>Lorem ipsum dolor sit amet</h4>
+                                                              </div>
+                                                        </div>
                                                    </div>
                                                    <div class="main-stories-headline float-end">
                                                        <span>12th March  2023</span>
@@ -352,6 +368,12 @@
                                      
                                      <div class="top-story-line">
                                          <img src="./assets/images/news-1.jpg">
+                                         <div class="top-story-line-overlay">
+                                                     <div class="top-story-line-overlay-text">
+                                                                    <h4>Lorem ipsum dolor sit amet consectetur adipiscing</h4>
+                                                              </div>
+                                         </div>
+
                                      </div>
                                      <div class="main-stories">
                                            <div class="main-stories-description pt-2 pb-2">
