--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                       <a class="navbar-brand" href="#">
                           <!--<img src="./assets/images/pngwing.com (84).png" src="logo">-->
                       </a>
-                      <button class="navbar-toggler" type="button"  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:#fff !important">
+                      <!--<button class="navbar-toggler" type="button"  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:#fff !important">
                           <span class="navbar-toggler-icon"></span>
-                      </button>
+                      </button>-->
+
                       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                            <ul class="navbar-nav">
                                 <li class="nav-item">
@@ -56,8 +57,54 @@
                                 </li>
                            </ul>
                       </div>
+                      <div class="mobile-navbar-toggle d-lg-none">
+                             <a href="" data-bs-toggle="modal" data-bs-target="#mobile_nav"><i class="fas fa-bars"></i></a>
+                      </div>
+
                </div>
          </div> 
+         <div class="modal" id="mobile_nav">
+                <div class="modal-dialog">
+                      <div class="modal-content">
+                            <div class="modal-header">
+                                  <h5 class="modal-title">Modal title</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                    <div class="modal-line">
+                                           <a href="">home</a>
+                                    </div>
+
+                                    <div class="modal-line">
+                                           <a href="">news</a>
+                                    </div>
+                                    <div class="modal-line">
+                                           <a href="">technology</a>
+                                    </div>
+                                    <div class="modal-line">
+                                           <a href="">agriculture</a>
+                                    </div>
+
+                                    <div class="modal-line">
+                                           <a href="">entertainment</a>
+                                    </div>
+
+                                    <div class="modal-line">
+                                           <a href="">lifestyle</a>
+                                    </div>
+                                    <div class="modal-line">
+                                           <a href="">video</a>
+                                    </div>
+                                    <div class="modal-line">
+                                           <a href="">login</a>
+                                    </div>
+
+
+
+                            </div>
+                      </div>
+                </div>
+         </div>
         <div id="topnews">
               <div class="container-fluid">
                    <div class="row g-3">
