--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                </div>
          </div> 
          <div class="modal" id="mobile_nav">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-fullscreen">
                       <div class="modal-content">
                             <div class="modal-header">
                                   <h5 class="modal-title">Modal title</h5>
