hello good afternoon

--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
                             </div>
                             <div class="modal-body">
                                     <div class="modal-line">
-                                           <a href="">home</a>
+                                           <a href="./index">home</a>
                                     </div>
 
                                     <div class="modal-line">
-                                           <a href="">news</a>
+                                           <a href="../page/news.html">news</a>
                                     </div>
                                     <div class="modal-line">
-                                           <a href="">technology</a>
+                                           <a href="../page/technology.html">technology</a>
                                     </div>
                                     <div class="modal-line">
-                                           <a href="">agriculture</a>
-                                    </div>
-
-                                    <div class="modal-line">
-                                           <a href="">entertainment</a>
+                                           <a href="../page/agriculture.html">agriculture</a>
                                     </div>
 
                                     <div class="modal-line">
-                                           <a href="">lifestyle</a>
+                                           <a href="../page/entertainment.html">entertainment</a>
+                                    </div>
+
+                                    <div class="modal-line">
+                                           <a href="../page/lifestyle.html">lifestyle</a>
                                     </div>
                                     <div class="modal-line">
-                                           <a href="">video</a>
+                                           <a href="../page/video.html">video</a>
                                     </div>
                                     <div class="modal-line">
                                            <a href="">login</a>
