--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="modal-dialog modal-fullscreen">
                       <div class="modal-content">
                             <div class="modal-header">
-                                  <h5 class="modal-title">Modal title</h5>
+                                  <!--<h5 class="modal-title">Modal title</h5>-->
                                   <button type="button" class="btn-close" style="color:#f3f3f3" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
