--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                                </div>
                                                <div class="story-details float-end">
                                                     <span><b>Entertaiment</b></span>
-                                                    <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                    <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit</b></a></h5>
                                                    <!--<p>20 March ,2023</p>-->
                                                </div>
                                            </div>
@@ -170,7 +170,7 @@
                                                 </div>
                                                 <div class="story-details float-end">
                                                     <span><b>lifestyle</b></span>
-                                                    <h5><a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></h5>
+                                                    <h5><a href=""><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit</b></a></h5>
                                                     <!--<p>20 March ,2023</p>-->
                                                 </div>
                                            </div>
