--- a/index.html
+++ b/index.html
@@ -613,11 +613,11 @@
 
 
                                </div>
-                               <div class="col-md-4">
+                               <div class="col-md-4 mb-4">
                                     <div class="ad-image">
                                           <img src="./assets/images/lifestyle.jpg">
                                           <div class="ad-image-over">
-                                              fffff
+                                              
                                           </div>
                                     </div>
                                </div>
